# image-binary

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
src/: main.rs
src/models/: types.rs
