[package]
name = "image-binary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
http = "0.2.9"
image = "0.24.7"
log = "0.4.20"
log4rs = "1.2.0"
openssl = "0.10.57"
serde = "1.0.188"
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tracing = "0.1.37"
